feat: add id generation to mesh class

--- a/build_config.json
+++ b/build_config.json
@@ -1,6 +1,6 @@
 {
     "executable name" :     "sandbox",
-    "compiler" :            "clang",
+    "compiler" :            "gcc",
     "source directory" :    "src",
     "build directory" :     "build",
     "compilation mode" :    "debug",
